--- a/contact-app/public/index.css
+++ b/contact-app/public/index.css
@@ -2,7 +2,7 @@
 body, html {
     height: 100%;
     /* Add vendor prefixes for wider browser support */
-    font-family: 'Charmonman', cursive !important;
+    font-family: 'Nunito', sans-serif;
     transition: all 0.3s ease-in-out;
 
   }
