--- a/contact-app/public/index.css
+++ b/contact-app/public/index.css
@@ -7,3 +7,12 @@ body, html {
 
   }
 
+
+  .card {
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .card:hover {
+    transform: scale(1.02);
+    cursor: pointer;
+  }
